fix: tabs button align right

--- a/src/styles/tabs.less
+++ b/src/styles/tabs.less
@@ -145,6 +145,10 @@
     text-align: right;
   }
 
+  &-align-right &-header-button {
+    text-align: right;
+  }
+
   &-vertical {
     display: flex;
     justify-content: flex-start;
